# llm-evals

./: .gitignore  pyproject.toml
scenarios/: climate_implicit.yaml
src/llm_eval/: cli.py  config.py  models.py
src/llm_eval/analysis/: __init__.py  deterministic.py  llm_judge.py  statistical.py  translation.py
src/llm_eval/engine/: __init__.py  retry.py  runner.py
src/llm_eval/output/: charts.py  formats.py  report.py
src/llm_eval/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  registry.py
tests/: test_cross_language_blocks.py
